--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,3 @@
-<!-- login_form.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,14 +7,61 @@
 </head>
 <body>
     <h2>Login</h2>
-    <form action="/OpenChat/login/" method="post">
+    <form id="loginForm">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required><br>
 
         <label for="password">Password:</label>
         <input type="password" id="password" name="password" required><br>
 
-        <button type="submit">Submit</button>
+        <!-- Добавляем элемент для вывода сообщения об ошибке -->
+        <div id="error-message" style="color: red;"></div>
+
+        <!-- Используем JavaScript для отправки POST-запроса при событии submit формы -->
+        <button type="button" onclick="submitForm()">Submit</button>
     </form>
+        <script>
+            function submitForm() {
+                // Получаем значения полей из формы
+                var username = document.getElementById("username").value;
+                var password = document.getElementById("password").value;
+
+                var data = {
+                    username: username,
+                    password: password
+                };
+
+                // Создаем Fetch API запрос
+                fetch('/OpenChat/login/', {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                    },
+                    body: JSON.stringify(data)
+                })
+                .then(response => {
+                    console.log('Status:', response.status);
+
+                    if (!response.ok) {
+                        return response.text().then(text => {
+                            throw new Error(text);
+                        });
+                    }
+
+                    return response.json();
+                })
+                .then(data => {
+                    // Установка куки с токеном
+                    document.cookie = `access_token=${data.access_token}; path=/;`;
+
+                    // Перенаправление на страницу чата
+                    window.location.href = "/OpenChat/chat";
+                })
+                .catch(error => {
+                    console.error('There has been a problem with your fetch operation:', error);
+                    document.getElementById("error-message").innerText = "Invalid username or password";
+                });
+            }
+        </script>
 </body>
 </html>
