--- a/templates/register.html
+++ b/templates/register.html
@@ -59,9 +59,7 @@
                 return response.json();
             })
             .then(data => {
-                console.log('Response:', data);
-
-                window.location.href = "/OpenChat/login";
+                window.location.href = "/OpenChat/chat";
             })
             .catch(error => {
                 console.error('There has been a problem with your fetch operation:', error);
