--- a/templates/chat.html
+++ b/templates/chat.html
@@ -79,6 +79,7 @@
             border-radius: 15px;
             padding: 10px;
             white-space: normal;
+            min-height: calc(70vh - 80px);
             max-height: calc(70vh - 80px); /* Максимальная высота чата, учитывая отступ вниз */
             overflow-y: auto; /* Добавить вертикальную прокрутку внутри .chat-window */
             display: flex;
